--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <div class="card">
     <div class="row">
-      <div class="label">התפטרות מנוצלת</div>
+      <div class="label"> התפטרות מניצת</div>
       <div class="pill">15.03.2026</div>
     </div>
     <div class="big" id="cdResign">טוען…</div>
